# LABA3OOP

./: CMakeLists.txt  main.cpp  test_laba3.cpp
Array/: Array.cpp  Array.h
Figure/: figure.cpp  figure.h
Rect/: rectangle.cpp  rectangle.h
Square/: square.cpp  square.h
Trap/: trapezoid.cpp  trapezoid.h
